src/main/java/com/example/diningwith/core/support/error/CoreException.java
package com.example.diningwith.core.support.error;


public class CoreException extends TypeException {
    public CoreException(ExceptionType exceptionType) {
        super(exceptionType);
    }
}
